--- a/paidservice.html
+++ b/paidservice.html
@@ -24,7 +24,7 @@
 											<li><a href="index.html">Home</a></li>
 											<li><a href="paidservice.html">PAID SERVICE</a></li>
 											<li><a href="samples.html">SAMPLES</a></li>
-											<li><a href="New folder/contact.html">CONTACT US</a></li>
+											<li><a href="contact.html">CONTACT US</a></li>
 										</ul>
 									</div>
 								</li>
