--- a/paidservice.html
+++ b/paidservice.html
@@ -42,7 +42,10 @@
 							<div class="inner">
 
 								<h3>PRICE LIST</h3>
-								<img src="paidwork.jpg" alt="PRICE LIST">
+							<div class="box alt">
+									<div class="row gtr-50 gtr-uniform">
+										<br>
+										<div class="col-4"><span class="image fit"><img src="paidwork.jpg" alt="" /></span><br></div>
 								<CEnter>
 								<button class="btn">
 									<i class="fa fa-shopping-cart" aria-hidden="true"> <a href="https://instagram.com/noob_galaxy_ff" >PLACE YOUR ORDER</a></i>
